--- a/data/prefs.css
+++ b/data/prefs.css
@@ -36,6 +36,15 @@
   list-style-image: url("resource://customizable-shortcuts-at-timtaubert-dot-de-customizable-shortcuts-data/icon.png");
 }
 
+#BrowserPreferences[animated="true"] #shortcutsTree {
+  height: 25em;
+}
+
+#BrowserPreferences[animated="false"] #shortcutsTree {
+  -moz-box-flex: 1;
+}
+
+
 #shortcutsTree > treechildren::-moz-tree-cell-text(container),
 #shortcutsTree > treechildren::-moz-tree-cell-text(custom) {
   font-weight: 700;
