--- a/data/prefs.css
+++ b/data/prefs.css
@@ -31,46 +31,84 @@
  * the terms of any one of the MPL, the GPL or the LGPL.
  *
  * ***** END LICENSE BLOCK ***** */
-   
-self.port.on("findPlugins",function (workerID) { // Look for objects to modify.
-var cssSelectors = self.options.cssSelectors;
-var embeds = (document.querySelectorAll(cssSelectors) || []);
-// embeds && console.warn("DEBUG:	queryselectorall: "+embeds.length);
 
-for (let i = 0; i < (embeds.length || 0); i++) {
-console.warn("DEBUG:	Embed: "+embeds[i]);
-if (embeds[i].hasAttribute("onClick")) { // If we've already got an onClick, make sure to save it in case the user wants to disable this feature.
-// console.warn("DEBUG:	Item already has onClick property, copying it for reference later.");
-embeds[i].setAttribute("onClickOriginal",embeds[i].getAttribute("onClick"));
-}
-embeds[i].setAttribute("onClick","this.blur()");
-
-}
-if (embeds.length < 1) {
-
-// console.warn ("DEBUG:	Worker ID: "+workerID.number+" found no objects to work on; reporting to addon.");
-self.port.emit("noEmbeds",workerID);
-
-
+prefpane > .content-box,
+prefwindow > .paneDeckContainer {
+    overflow: visible;
 }
 
-});
-
-self.port.on("removeMods",function removeMods () {
-var cssSelectors = self.options.cssSelectors;
-var embeds = (document.querySelectorAll(cssSelectors) || []);
-embeds && console.warn("DEBUG:	queryselectorall: "+embeds.length);
-
-for (let i = 0; i < (embeds.length || 0); i++) {
-
-// console.warn("DEBUG:	Removing mod from Embed: "+embeds[i]);
-embeds[i].removeAttribute("onClick");
-if (embeds[i].hasAttribute("onClickOriginal")) {
-// console.warn("DEBUG:	Item had a previous onClick function, restoring it.");
-embeds[i].setAttribute("onClick",embeds[i].getAttribute("onClickOriginal")); // Restore original function, if available.
-embeds[i].removeAttribute("onClickOriginal");
-}
-// self.port.emit("revertedChanges",[ embeds[i].tagName, embeds[i].id, document.URL ])
+#ttCustomizableShortcuts_Tree > treechildren::-moz-tree-cell-text(container),
+#ttCustomizableShortcuts_Tree > treechildren::-moz-tree-cell-text(custom) {
+  font-weight: 700;
 }
 
-});
+#ttCustomizableShortcuts_Tree > treechildren::-moz-tree-cell-text(overridden) {
+  text-decoration: line-through;
+}
+
+#ttCustomizableShortcuts_Tree > treechildren::-moz-tree-cell-text(container) {
+  padding-left: 4px;
+}
+
+
+prefwindow[animated="false"] #ttCustomizableShortcuts_Tree {
+  -moz-box-flex: 1;
+}
+
+prefwindow[animated="true"] #ttCustomizableShortcuts_Tree {
+  height: 25em;
+}
+
+hbox { border-style : solid;
+	      border-color: grey;
+	      padding: 1px;
+	      margin: 1px;
+		}
+vbox { border-style : solid;
+	      border-color: black;
+	      padding: 1px;
+	      margin: 1px;
+	}
+separator {
+ border-style : solid;
+	      border-color: green;
+	      padding: 1px;
+	      margin: 1px;
+}
+
+prefwindow { border-style : solid;
+	      border-color: red;
+	      padding: 1px;
+	      margin: 1px;
+	}
+	
+spacer { border-style : solid;
+	      border-color: blue;
+	      padding: 1px;
+	      margin: 1px;
+	}
+	
+#tree_box { border-style : solid;
+	      border-color: purple;
+	      padding: 1px;
+	      margin: 1px;
+	}
+
+#button_box { border-style : solid;
+	      border-color: orange;
+	      padding: 1px;
+	      margin: 1px;
+	}
+	
+#search_box { border-style : solid;
+	      border-color: cyan;
+	      padding: 1px;
+	      margin: 1px;
+	}
+	
+prefpane { border-style : solid;
+		    border-color: brown;
+		    padding: 1px;
+		    margin: 1px;
+		    -moz-box-flex:1;
+	}
